alignment fix
centered text; added to css

--- a/style.css.css
+++ b/style.css.css
@@ -40,7 +40,6 @@
       color: #555555;
       font-size: 15px;
       font-family: 'Libre Baskerville', serif;
-      max-width: 500px;
     }
     button {
       background-color: #008080;
@@ -63,6 +62,7 @@
       color: #008080;
       font-size: 40px;
       font-family: 'Libre Baskerville', serif;
+      margin: 30px 30px 30px 30px;
     }
     input {
       border: 1px;
@@ -91,4 +91,9 @@
       border: 1px solid #a1a1a1;
       border-radius: 5px;
     }
+  div[id="ideaDisplay"] {
+    max-width: auto;
+    text-align: center;
+    margin: 0 50px 0 50px;
+  }
   </style>
